<resources>
    <string name="app_name">LifeAuctioneer</string>
    <string name="menu_about">About</string>

    <string name="app_description">Life Auctioneer v{version} \n\n you can report issue to here: \n xwanlion.github.io</string>
    <string name="app_support_by">this App use AndServer as server</string>
    <string name="app_icon_description">San You Chess</string>
    <string name="txt_activity_auctioneer">auctioneer</string>
    <string name="txt_activity_item_date">2021-03-21</string>
    <string name="btn_del_activity_list_item">Del</string>
    <string name="btn_copy_activity_list_item">Copy</string>
    <string name="btn_start_activity_list_item">Start</string>>

    <string name="date_format">yyyy-MM-dd HH:mm</string>
    <string name="txt_activity_item_money">$10000</string>>
    <string name="txt_lot_list_item_start_price">$%1$d</string>
    <string name="txt_lot_list_item_increment">+%1$d</string>
    <string name="txt_activity_list_item_money">$%1$d</string>
    <string name="txt_activity_list_item_money_per_age">$%1$d/age</string>
    <string name="btn_stop_activity_list_item">Stop</string>
    <string name="btn_exits_windows">Exits</string>
    <string name="btn_show_int_browser">Show In Browser</string>
    <string name="btn_have_no_wifi">I HAVE NO WIFI</string>
    <string name="btn_set_up_hotspot">SET UP HOTSPOT</string>
    <string name="pic_new_auction_item">select a picture please</string>
    <string name="lbl_new_auction_item_name">Item Name</string>
    <string name="lbl_new_auction_item_start_price">Start Price</string>
    <string name="lbl_new_auction_item_increment">Increment</string>
    <string name="lbl_new_auction_item_desc">Desc</string>
    <string name="hint_new_auction_picture">please select Item\'s image</string>
    <string name="hint_new_auction_item_name">please input Item\'s name</string>
    <string name="hint_new_auction_item_start_price">please input start price</string>
    <string name="hint_new_auction_item_increment">Increment of each bid</string>
    <string name="hint_new_auction_item_desc">description of item</string>>
    <string name="btn_submit_auction_item">submit auction item</string>
    <string name="pic_auction_lot_list_item_picture_tips">lot picture</string>
    <string name="lbl_auction_lot_list_item_name">name</string>
    <string name="lbl_auction_lot_list_item_start_price">$500</string>
    <string name="lbl_auction_lot_list_item_increment">+100</string>
    <string name="btn_auction_lot_list_item_del_tips">delete</string>
    <string name="btn_add_auction_lot_tips">Add</string>
    <string name="button_text_save">SAVE</string>
    <string name="txt_activity_list_fragment_title">Activity List</string>
    <string name="txt_Lot_list_fragment_title">Lot List</string>
    <string name="txt_add_lot_fragment_title">Add Lot</string>>
    <string name="lbl_new_bidder_name">Bidder Name</string>
    <string name="hint_new_bidder_name">please input Bidder name</string>
    <string name="lbl_new_bidder_password">Pass Word</string>
    <string name="hint_new_bidder_password">please input password</string>
    <string name="txt_add_bidder_fragment_title">Add Bidder</string>
    <string name="msg_add_bidder_success">Bidder Has Save Successful</string>
    <string name="lbl_bidder_list_item_bidder_name">Tom</string>
    <string name="btn_bidder_list_item_del_tips">delete bidder</string>
    <string name="btn_add_bidder_tips">Add</string>
    <string name="txt_bidder_list_tips">If empty, anyone can participate in the auction.</string>
    <string name="txt_bidder_list_fragment_title">Bidder List</string>
    <string name="txt_money_setting_fragment_title">Money Setting</string>
    <string name="txt_host_man_setting_fragment_title">Auctioneer Setting</string>
    <string name="txt_review_fragment_title">Auction Review</string>
    <string name="tips_activity_next_step">Next</string>
    <string name="lbl_get_fix_money">bidder gets a fixes numeric money</string>
    <string name="lbl_get_money_by_age">bidder gets his money by age(dollar/age)</string>
    <string name="txt_default_fixed_money">6000</string>
    <string name="txt_money_per_age">100</string>
    <string name="hits_get_money_by_age">get money by age</string>
    <string name="hits_get_fixed_money">get fixed money</string>
    <string name="lbl_auction_host_man">Auctioneer</string>
    <string name="hits_auction_host_man">who hold the auction？</string>
    <string name="txt_auction_host_password">Password</string>
    <string name="hits_auction_host_password">auctioneer\'s password</string>
    <string name="msg_need_host_man">auctioneer can not be null!</string>
    <string name="lbl_auction_lot_name">Lots</string>
    <string name="txt_zero">0</string>
    <string name="lbl_auction_bidders">Bidders</string>
    <string name="lbl_auction_money">Money</string>
    <string name="lbl_auction_host">Auctioneer</string>
    <string name="txt_auction_host">Jim</string>
    <string name="btn_back_home">Home</string>
    <string name="msg_money_setting_invalid_selected">selected is not available</string>
    <string name="lbl_activity_url_tips">holding auctions at:\n http://%1$s:%2$d</string>
    <string name="lbl_auctions_url">http://%1$s:%2$d</string>
    <string name="tips_and_server_stopped">Auctions Has Stopped!</string>
    <string name="tips_and_server_error">Auctions Activity Occur Error!</string>
    <string name="txt_andserver_register_failed">AndServer Register Failed!</string>
    <string name="tips_need_join_internet">You Need Connect To A WIFI Before Starting Auctions Activity.</string>

    <string name="tips_can_share_hotspot">Have no WIFI? You can  share your Hotspot WIFI.</string>
    <string name="file_selector_title">select file</string>
    <string name="file_selector_open_fail">file selector open fail!</string>
    <string name="select_file_fail">file select fail!</string>
    <string name="amount_must_be_digital">%1$s must be digital</string>
    <string name="must_greater_than_zero">%1$s must be greater than zero</string>

    <string name="msg_server_started_fail">Activity started fail</string>

</resources>
