<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lbl_auction_start_lot_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_auction_lot_name"
        android:textColor="@color/app_desc_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_start_activity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/txt_auction_start_lot_items"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@color/textColorPrimary"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_padding_left_default_value"
        android:paddingLeft="@dimen/dp_padding_left_default_value"
        android:text="@string/txt_zero"
        android:textColor="@color/app_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_auction_start_lot_items"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/lbl_auction_start_bidders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_auction_bidders"
        android:textColor="@color/app_desc_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_start_activity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23" />

    <TextView
        android:id="@+id/txt_auction_start_bidders"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@color/textColorPrimary"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_padding_left_default_value"
        android:paddingLeft="@dimen/dp_padding_left_default_value"
        android:text="@string/txt_zero"
        android:textColor="@color/app_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_auction_start_bidders"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/lbl_auction_start_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_auction_money"
        android:textColor="@color/app_desc_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_start_activity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/txt_auction_start_money"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@color/textColorPrimary"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_padding_left_default_value"
        android:paddingLeft="@dimen/dp_padding_left_default_value"
        android:text="@string/txt_zero"
        android:textColor="@color/app_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_auction_start_money"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/lbl_auction_start_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_auction_host"
        android:textColor="@color/app_desc_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_start_activity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <TextView
        android:id="@+id/txt_auction_start_host"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@color/textColorPrimary"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_padding_left_default_value"
        android:paddingLeft="@dimen/dp_padding_left_default_value"
        android:text="@string/txt_auction_host"
        android:textColor="@color/app_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_auction_start_host"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_set_up_hotspot"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_set_up_hotspot"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_auction_start_host"
        app:layout_constraintVertical_bias="0.338" />

    <Button
        android:id="@+id/btn_exit_window"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/sh_starting_window_sub_button_radius"
        android:text="@string/btn_exits_windows"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_activity"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_have_no_wifi"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_have_no_wifi"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_auction_start_host"
        app:layout_constraintVertical_bias="0.338" />

    <TextView
        android:id="@+id/lbl_starting_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/lbl_activity_url_tips"
        android:textColor="@color/app_desc_text_color"
        app:layout_constraintBottom_toTopOf="@+id/btn_stop_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_auction_start_host"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_start_activity"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_start_activity_list_item"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_auction_start_host"
        app:layout_constraintVertical_bias="0.338" />

    <Button
        android:id="@+id/btn_stop_activity"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@color/app_color_red"
        android:text="@string/btn_stop_activity_list_item"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_auction_start_host"
        app:layout_constraintVertical_bias="0.338" />

    <Button
        android:id="@+id/btn_show_in_browser"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/sh_starting_window_sub_button_radius"
        android:text="@string/btn_show_int_browser"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_activity"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>